# fas2ipa

./: .gitignore  FPCA.txt  README.md  Vagrantfile  config.toml.example  main.py  pyproject.toml  settings_default.py  tox.ini
.containerdev-public/: Dockerfile
devel/ansible/roles/dev/files/: .bashrc
devel/ansible/roles/dev/tasks/: main.yml
fas2ipa/: agreements.py  cli.py  config.py  groups.py  ipa_plugin.py  statistics.py  status.py  users.py  utils.py
